<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f3f3f3"
    android:layout_margin="@dimen/_5sdp"
    >

    <TextView
        android:id="@+id/ac_holder_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_5sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="sudhanshu"/>
    <LinearLayout
        android:id="@+id/ll_rechargetoalltable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:layout_below="@+id/ac_holder_textview"
        android:orientation="horizontal"
        android:weightSum="90">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="20"
            android:background="@drawable/grey_reactangular_border"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/greyborder" />

            <TextView
                android:id="@+id/txtbank_name"
                style="@style/font_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="@dimen/_5sdp"
                android:text="@string/bank_name"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/greyborder" />


            <TextView
                android:id="@+id/txt_bank"
                style="@style/font_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/skyblue"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:background="@color/greyborder" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="40"
            android:background="@drawable/grey_reactangular_border"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/greyborder" />

            <TextView
                android:id="@+id/lbl_account"
                style="@style/font_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="@dimen/_5sdp"
                android:text="@string/account_number"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/greyborder" />


            <TextView
                android:id="@+id/txt_accno"
                style="@style/font_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/skyblue"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:background="@color/greyborder" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/greyborder" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="30"

            android:background="@drawable/grey_reactangular_border"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/greyborder" />

            <TextView
                android:id="@+id/lbl_ifsc"
                style="@style/font_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="@dimen/_5sdp"
                android:text="IFSC"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/greyborder" />


            <TextView
                android:id="@+id/txt_ifsc"
                style="@style/font_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/skyblue"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:background="@color/greyborder" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/greyborder" />


        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@+id/ll_rechargetoalltable"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pay"
                style="@style/font_regular_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="Pay"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/btnblueripple"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/delete"
                style="@style/font_regular_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="Delete"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/btnblueripple"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </LinearLayout>
    <LinearLayout
        android:id="@+id/pay_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:visibility="gone"
        android:background="@color/white"
        android:layout_below="@+id/ll_rechargetoalltable"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtrecharamt"
            style="@style/font_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/viewrechargeamt"
            android:background="#f3f3f3"
            android:gravity="center"
            android:hint="@string/amount"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:layout_weight="1"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/pay1"
            style="@style/font_regular_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="Pay"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/btnblueripple"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>